syntax = "proto3";

package envoy.type;
option go_package = "envoy_type";

import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;

// [#protodoc-title: StringMatch]

// Specifies the way to match a string.
message StringMatch {
  oneof match_pattern {
    // The input string must match exactly the string specified here.
    // Or it is a "*", which means that it matches any string.
    string simple = 1;

    // The input string must have the prefix specified here.
    string prefix = 2;

    // The input string must have the suffix specified here.
    string suffix = 3;

    // The input string must match the regular expression specified here.
    // The regex grammar is defined `here
    // <http://en.cppreference.com/w/cpp/regex/ecmascript>`_.
    string regex = 4;
 }
}

